--- a/SpringCore/pom.xml
+++ b/SpringCore/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.maomao.spring</groupId>
-    <artifactId>Spring-EL</artifactId>
+    <artifactId>Spring-Core</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Spring-EL</name>
+    <name>Spring-Core</name>
     <url>http://maven.apache.org</url>
 
     <properties>
