--- a/SpringMVC/pom.xml
+++ b/SpringMVC/pom.xml
@@ -46,5 +46,11 @@
             <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.3.4.Final</version>
+        </dependency>
     </dependencies>
 </project>
