--- a/SpringMVC/pom.xml
+++ b/SpringMVC/pom.xml
@@ -14,7 +14,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.3.6.RELEASE</spring.version>
+        <hibernate.version>5.3.4.Final</hibernate.version>
         <servlet.version>3.1.0</servlet.version>
+        <jackson.version>2.8.6</jackson.version>
     </properties>
 
     <dependencyManagement>
@@ -50,7 +52,13 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.3.4.Final</version>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 </project>
