--- a/SpringMVC/pom.xml
+++ b/SpringMVC/pom.xml
@@ -16,6 +16,7 @@
         <spring.version>4.3.6.RELEASE</spring.version>
         <hibernate.version>5.3.4.Final</hibernate.version>
         <servlet.version>3.1.0</servlet.version>
+        <jstl.version>1.2</jstl.version>
         <jackson.version>2.8.6</jackson.version>
     </properties>
 
@@ -47,6 +48,12 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
         </dependency>
 
         <dependency>
